	  STM32F4. Includes untested additions for the F1 implementation as
	  well.  From Petteri Aimonen.

6.26 2013-xx-xx Gregory Nutt <gnutt@nuttx.org>

	* drivers/serial/serial.c:  Correct some race conditions when checking
	  for disconnection of a removable serial device.
	* sched/task_posixspawn.c, task_spawn.c, task_spawnparms.c and
	  spawn_internal.h:  Create new interface task_spawn() that is
	  like posix_spawn(), but uses entry point addresses like
	  task_create().
	* Corrected all argv[] arguments. Should be char * const *, not
	  const char **.
	* sched/pthread* and include/nuttx/sched: Move pthread join data
	  and pthread key calculation data into the "task group" structure.
	* sched/atexit.c, on_exit.c, task_exithook.c and include/nuttx/sched.h:
	  Move atexit and on_exit data structures to task group.  These
	  callbacks are only issued now when the final member of the task
	  group exits.
	* sched/waitpid.c, task_exithook.c and include/nuttx/sched.h:
	  Move waitpid data data structures to task group.  Callers of
	  of waitpid() are now only awakened whent he final thread of the
	  task group exits.
	* sched/mq_descreate.c, mq_open.c, mq_remove.c, group_leave.c, and
	  include/nuttx/sched.h:  Move list of opened message queues to
	  the task group structures.  Now all message queues opened by
	  members of the group are closed when the last member of the group
	  exits.
	* includes/nuttx/sched.h and Lots of files:  Change name of _TCB to
	  struct tcb_s so that (1) it is consitent with other NuttX naming and
	  so that (2) the naming can handle some upcoming changes.
	* includes/nuttx/sched.h and sched/:  There are three TCB structures:
	  struct tcb_s is a generic common version, struct task_tcb_s is a
	  version for tasks and kernel threads and pthread_tcb_s is a version
	  for pthreads.  By dividing the TCB structure into these variants,
	  pthreads do not have to be burdened by task-specific data structures
	  (and vice versa).
